# cppcourse-brunel

./: CMakeLists.txt  Doxyconfig  README.md  constants.hpp  core  network.cpp  network.hpp  neuron  neuron.cpp  neuron.hpp  neuron1.txt  neuron_unittest.cpp  ploting.py  test1.txt  test_fun1.cpp  test_neuron.cpp
